--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 <body>
 <center>
     <h1>
-        Select any Pet Type (Modified by Rushikesh Again)
+        Select any Pet Type (Modified by Rushikesh x Abhishek )
     </h1>
     <form method="post" action="SelectPet">
        <br>
